Added modifier for numeric results

--- a/src/main/resources/net/unknowndomain/alea/systems/fitd/RpgSystemBundle.properties
+++ b/src/main/resources/net/unknowndomain/alea/systems/fitd/RpgSystemBundle.properties
@@ -25,6 +25,7 @@ usage.customSynopsis.0   = fitd -d <numberOfDice>
 usage.optionListHeading  = Options:%n
 
 fitd.options.dice=Number of dice to roll (0-6).
+fitd.options.numeric=Return the numeric result (used for stress-related rolls).
 
 fitd.results.successLevel.0=Failure
 fitd.results.successLevel.1=Partial Success
@@ -32,3 +33,4 @@ fitd.results.successLevel.2=Full Success
 fitd.results.successLevel.3=Critical Success
 
 fitd.results.diceResults=Results: 
+fitd.results.numRes=Result: %d
